Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134099

[REG 6.7.3->6.8]Global position for QHoverEvent issued from a QQuickItem inside a QQuickWidget is wrong.

    XMLWordPrintable

Details

    • macOS, Windows

    Description

      Global position for QHoverEvent issued from a QQuickItem inside a QQuickWidget is giving wrong values.

      To reproduce the issue:

      • Run the attached example project.
      • Hover on the QML button and check the position value.
      • Next, hover on the widget button and check the value.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            mahdi.belila Mehdi Belila
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes